updated piponiot citation

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -10202,6 +10202,16 @@
   file = {/Users/nidhivinod/Zotero/storage/DFV3GY5Z/Pincebourde and Casas - 2019 - Narrow safety margin in the phyllosphere during th.pdf;/Users/nidhivinod/Zotero/storage/ZSJ6SDWI/5588.html}
 }
 
+@article{piponiotDistributionBiomassDynamicsinpress,
+  title = {Distribution of Biomass Dynamics in Relation to Tree Size in Forests across the World.},
+  author = {Piponiot, Camille and Anderson-Teixeira KJ and Davies, SJ and Allen D, Bourg NA, Burslem and {DFRP, Cárdenas D, Chang-Yang C-H, Chuyong G, Cordell S, Dattaraja HS,} and {Duque Á, Ediriweera S, Ewango C, Ezedin Z, Filip J, Giardina C, Howe R,} and {Hsieh, C-F, Hubbell S, Inman-Narahari FM, Itoh A, Janik D, Kenfack D,} and {Kral K, Lutz JA, Makana J-R, McMahon S, McShea W, Mi X, Mohamad M,} and {Novotny V, O’Brien MJ, Ostertag R, Parker G, Pérez R, Ren H-B, Reynolds} and {G, Sabri MDM, Sack L, Shringi A, Su S-H, Sukumar R, Sun I-F, Suresh HS,} and {Thomas DW, Thompson J, Uriarte M, Vandermeer J, Wang Y, Ware IM, Weiblen} and {GD, Whitfeld TJS, Wolf Amy, Yao TL, Yu M, Yuan Z, Zimmerman JK, Zuleta} and {D, Muller-Landau HC. 2022.}},
+  year = {in press},
+  journaltitle = {New Phytologist},
+  url = {https://mail.google.com/mail/u/0/#inbox/FMfcgzGmvBjsQxLncXTSPTBhpZrWzdGg?projector=1&messagePartId=0.1},
+  urldate = {2022-02-17},
+  file = {/Users/nidhivinod/Zotero/storage/I55JETLA/FW Urgent - New Phytologist article proof - Check.pdf}
+}
+
 @article{piponiotSizerelatedTreeBiomassinreview,
   title = {Size-Related Tree Biomass Dynamics in Forests across the World},
   author = {Piponiot, Camille and Anderson-Teixeira, K.J. and MANY\_MORE},
