--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -178,7 +178,7 @@ Vertical transport at the macroscopic scale of a forest canopy is dominated by t
 Above the canopy, turbulent transport typically mimics diffusion – that is, vertical fluxes of heat, mass and momentum are proportional to their respective vertical gradients, and to transfer coefficients (eddy diffusivities, often symbolized K) that depend on both friction and buoyancy [@penmanWeatherWheatEssay1960]. 
 In this “K-theory” regime, wind speed declines logarithmically with proximity to the ground or canopy surface [@monteithPrinciplesEnvironmentalPhysics2013]. Interaction with a plant canopy also attenuates wind, causing wind speed to decline through the canopy; for example, small plant elements can rapidly dissipate momentum within dense canopies [e.g., @raupachAveragingProceduresFlow1982; @baldocchiSpectralLagcorrelationAnalysis1988].
 However, K-theory often fails within canopies, making forest vertical wind profiles difficult to generalize from first principles [e.g., @denmeadScalarTransportPlant1987; @RaupachM.R1989Ttip; @meyersModellingPlantCanopy1987; @katulModelingCO2Sources1999; @harmanSimpleUnifiedTheory2007].
-For example, in the lower canopy, wind speed may decrease with height despite net downward momentum flux [@shawSecondaryWindSpeed1977], and temperature may increase with height despite upward sensible heat flux [e.g., @raupachLagrangianAnalysisScalar1987].
+For example, in the lower canopy, wind speed may decrease with height despite net downward momentum flux [@shawSecondaryWindSpeed1977], and temperature may increase with height despite upward sensible heat moving vertically upwards through the canopy [e.g., @raupachLagrangianAnalysisScalar1987].
 Such counter-gradient transport may arise from the intermittent generation, at the canopy surface, of large wakes or coherent eddy structures that periodically dip down through the canopy, gathering packets of warmed, humidified and CO~2~-enriched or –depleted air from beneath and within the canopy and flushing them to the atmosphere above [@finniganTurbulenceWavingWheat1979; @baldocchiTraceGasExchange1991]. 
 These "sweep-eject" events can couple understory conditions more directly to conditions above the canopy than beneath. 
 
@@ -189,7 +189,7 @@ The implication is that upper canopy leaves have substantially higher boundary l
 
 Atmospheric concentrations of CO~2~ and water vapor can also vary across the vertical gradient.
 Atmospheric CO~2~ concentrations tend to be higher near the ground at night, associated with plant and soil respiration, although the elevated CO~2~ quickly dissipates during the day [@koike_leaf_2001; @yang_spatial_1999]. 
-Vertical CO~2~ concentration gradients can influence the ratio of leaf inter-cellular CO~2~ to ambient CO~2~ ($c_{i}/c_{a}$) calculated from $\delta^{13}C$, and refixation of respired CO~2~ vertically, where both tend to be higher at lower heights (Table 1). 
+Vertical CO~2~ concentration gradients can influence the ratio of leaf intercellular CO~2~ to ambient CO~2~ ($c_{i}/c_{a}$) calculated from $\delta^{13}C$, and refixation of respired CO~2~ vertically, where both tend to be higher at lower heights (Table 1). 
 Particularly, understory seedlings benefit from elevated CO~2~ by having highest rates of CO~2~ refixation [@brooksVerticalGradientsPhotosynthetic1997]. 
 However, given that differences are negligible for most of the day when photosynthesis is occurring, gradients in CO~2~ concentrations are unlikely to significantly affect the energy balance and metabolism of leaves across the forest vertical gradient.
  
