--- a/response-to-reviews.Rmd
+++ b/response-to-reviews.Rmd
@@ -378,7 +378,10 @@ Table 1: What is here is not leaf gas exchange, and it seems that the authors ha
 
 Lines 354-372 on sun versus shade leaves and Table 1. Most of what is here was known a long time ago, say in Vogel 1968 (cited) and Boardman 1977 (not cited) but pertains to within-canopy rather than between sun and shade plants. I would suggest that this would be improved if the authors started from these old studies that most readers will recognise, and state how we’ve advanced in understanding and progressed toward within-canopy work rather than between sun-and-shade habitats.
 
-*(see Lawren's comments in google doc)*
+**Thank you for the suggestion. We have added additional information highlighting older work and recent advances in the paragraph below**
+
+**This vertical variation in leaf structure and composition has been long recognized, with sun and shade leaf traits distinguished for more than 100 years [@haberlandtPhysiologicalPlantAnatomy1914; @salisburyCausesEcologicalSignificance1928]. Early work attributed differences among leaves to sun versus shade [@wyliePrinciplesFoliarOrganization1951; @vogelSunLeavesShade1968], and this tendency grew given the parallel differences observed for plants grown in sun versus shade conditions [@boardmanComparativePhotosynthesisSun1977; @abramsLeafStructuralCharacteristics1990]. More recent work has included a focus not only on light, but also on leaf height in the canopy, as important in determining differences in mature leaf structure and function, as leaf traits may partially mitigate the effects of gravity and hydraulic pathlength that would affect leaves higher up in the canopy [@sackHowStrongIntracanopy2006; @kochLimitsTreeHeight2004; @burgessRegressionsLeafTraits2006]. For example, leaf mass per area (LMA), photosynthetic capacity ($A_{max}$ per area) and $g_s$ have been observed to increase with height, independently of light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000; @binLeafTraitExpression2022]. Thus, leaves develop differently throughout the canopy according to the irradiance and hydraulic stress associated with their canopy location, height and evaporative load, with additional potential influences of the ontogenetic stage of the branches [Table `r table_leaf_traits`; @carterExperimentalWarmingTropical2021; @niinemetsResponsesForestTrees2010a; @casasSunShadeLeaves2011;  @keenanGlobalLeafTrait2016; @binLeafTraitExpression2022; @sackHowStrongIntracanopy2006; @chenLeafEconomicsSpectrum2020; @niinemetsVariabilityLeafMorphology2015]. Plasticity throughout the canopy may emerge during new leaf development with leaves being influenced by information from adjacent mature leaves or apical meristem, including  (e.g., for deciduous species expanding leaves) a “memory” of previous conditions in that location, and may also acclimate during and after expansion to to the current microclimate [@zwienieckiHydraulicLimitationsImposed2004]. Overall, leaves may optimize their biochemical, anatomical and structural traits according to their light environment and height (@lloydOptimisationPhotosyntheticCarbon2010; @buckleyOptimalCarbonPartitioning2021; @hikosakaOptimalNitrogenDistribution2014; @kitaoCanopyNitrogenDistribution2018; @niinemetsPhotosynthesisResourceDistribution2007). Yet, while these studies have clarified many details of leaf differences throughout the canopy, no papers have integrated the many differences in leaf traits throughout the canopy in a cohesive framework. Rather, much of our understanding of trait coordination is based on the leaf economics spectrum concept developed across diverse species using sun leaves [@wrightWorldwideLeafEconomics2004, @keenanGlobalLeafTrait2016; @chenLeafEconomicsSpectrum2020]. As canopy shade is known to alter these trait relationships (@osnasDivergentDriversLeaf2018), further research is needed to characterize trait relationships and responses vertically through the full range of canopy microenvironments.**
+
 
 line382: 'more frequent stomatal closure higher' is awkward and does not follow the comparative. Higher than what?
 
