@teixeirak, I added the isoprene * in the caption but please let me know if this seems okay?

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -144,7 +144,7 @@ We focus on five key themes (Fig. `r fig_schematic`):
 (5) tree and ecosystem ecology.
 We then consider the implications for understanding forest responses to global change, including how these responses scale across space and time. 
 
-![**Figure `r fig_schematic`. Schematic summarizing vertical gradients in forests according to (1) biophysical environment, (2) leaf temperature ($T_{leaf}$), (3) leaf traits, (4) leaf metabolism, and (5) tree and ecosystem ecology.** Abbreviations are as follows: $T_{air}$: air temperature, VPD: vapor pressure deficit;  $T_{leaf}$ - $T_{air}$: leaf-to-air temperature difference; LMA: leaf mass per area, VAZ: violaxanthin, antheraxanthin and zeaxanthin concentrations, VOC: volatile organic compounds; T sensitivity: temperature sensitivity; ET: evapotranspiration. Here, we summarize conditions in closed-canopy forests during growing season and daytime conditions; patterns tend to be weaker, or sometimes reversed, in more open forests, when canopy trees are seasonally deciduous, or at nighttime. Arrows indicate direction of increase, with double-pointed arrows indicating that the direction of the trend is uncertain or inconsistent.](schematics/Schematic figure 1.png)
+![**Figure `r fig_schematic`. Schematic summarizing vertical gradients in forests according to (1) biophysical environment, (2) leaf temperature ($T_{leaf}$), (3) leaf traits, (4) leaf metabolism, and (5) tree and ecosystem ecology.** Abbreviations are as follows: $T_{air}$: air temperature, VPD: vapor pressure deficit;  $T_{leaf}$ - $T_{air}$: leaf-to-air temperature difference; LMA: leaf mass per area; T sensitivity: temperature sensitivity; ET: evapotranspiration. Here, we summarize conditions in closed-canopy forests during growing season and daytime conditions; patterns tend to be weaker, or sometimes reversed, in more open forests, when canopy trees are seasonally deciduous, or at nighttime. Arrows indicate direction of increase, with double-pointed arrows indicating that the direction of the trend is uncertain or inconsistent. *Isoprene emission has also been observed to peak in mid-canopy (Table `r table_leaf_traits`)](schematics/Schematic figure 1.png)
 
 
 # II. Review of vertical gradients
