--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -494,7 +494,7 @@ However, under well-watered conditions conducive to high $g_s$ in canopy trees, 
 In eight mesic forests across the northeast United States, tree-ring records showed steep growth declines of understory trees at higher $T_{air}$, contrasting with the responses of canopy trees [Fig `r fig_treerings`, @rollinsonClimateSensitivityUnderstory2020].
 Additional research is required to understand the mechanisms underlying these intriguing differences, and to disentangle size-related tree growth responses to hot-wet versus hot-dry conditions. 
 
-![**Figure `r fig_treerings`. Examples of tree-ring analyses showing differential interannual temperature sensitivity of annual growth between large canopy versus smaller understory trees.** In column (a), across three sites and species, trees with large diameter at breast height (DBH) had more negative growth responses to high temperatures during the current or previous growing season (denoted by c or p, respectively, on the x axes) than did small trees of the same species. Shown are tree ring width responses to the most influential temperature variable at the site ($T_{max}$ or PET) for the maximum and minimum tails of the DBH distribution included in the analysis.  Colored lines represent responses to the temperature variable in a model including a DBH - temperature interaction. Other model terms are held constant at their mean. Transparent ribbons indicate 95% confidence intervals. Vertical grey lines and shading indicate the long-term mean $\pm$ 1 standard deviation of the temperature variable. From @anderson-teixeiraJointEffectsClimate2022. In column (b), understory trees of four species had more negative growth responses to high growing season temperatures across eight New England forests. Growth is expressed as relativized basal area increment (BAI), where values > and < 100% indicate higher- or lower- than-average growth, respectively. Again, colored lines indicate modeled mean temperature responses and transparent ribbons indicate 95% confidence intervals. From @rollinsonClimateSensitivityUnderstory2020.](tree_rings/Figure_4_tree_rings.png)
+![**Figure `r fig_treerings`. Examples of tree-ring analyses showing differential interannual temperature sensitivity of annual growth between large canopy versus smaller understory trees.** In column (a), across three sites and species, trees with large diameter at breast height (DBH) had more negative growth responses to high temperatures during the current or previous growing season (denoted by c or p, respectively, on the x axes) than did small trees of the same species. Shown are tree ring width responses to the most influential temperature variable at the site ($T_{max}$ or PET) for the maximum and minimum tails of the DBH distribution included in the analysis.  Colored lines represent responses to the temperature variable in a model including a DBH - temperature interaction. Other model terms are held constant at their mean. Transparent ribbons indicate 95% confidence intervals. From @anderson-teixeiraJointEffectsClimate2022. In column (b), understory trees of four species had more negative growth responses to high growing season temperatures across eight New England forests. Growth is expressed as relativized basal area increment (BAI), where values > and < 100% indicate higher- or lower- than-average growth, respectively. Again, colored lines indicate modeled mean temperature responses and transparent ribbons indicate 95% confidence intervals. From @rollinsonClimateSensitivityUnderstory2020.](tree_rings/Figure_4_tree_rings.png)
 
 
 ### 5.2. C and water flux
