--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -531,7 +531,7 @@ As climate change progresses, we anticipate increases in both mean daytime and n
 These changes will impact leaf and ecosystem gas exchange with the atmosphere, and, over longer time frames, forest structure, composition, and leaf trait distributions. 
 Our in-depth review sheds some light as to how responses are likely to vary across forest vertical gradients, yet important uncertainties remain.
 
-To the extent that warming is coupled to drought, we expect that the largest trees will usually be hardest-hit, particularly in cases where the drought is severe, and that this will occur at least in part because their crowns are positioned in a more challenging microenvironment [section 5.1, Figs. `r fig_schematic`- `r fig_treerings`, e.g., @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019; @anderson-teixeiraJointEffectsClimate2022].
+To the extent that warming is coupled to drought, we expect that the tallest trees will usually be hardest-hit, particularly in cases where the drought is severe, and that this will occur at least in part because their crowns are positioned in a more challenging microenvironment [section 5.1, Figs. `r fig_schematic`- `r fig_treerings`, e.g., @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019; @anderson-teixeiraJointEffectsClimate2022].
 Specifically, warming will disproportionately stress tall canopy trees when $T_{air}$ and accompanying VPD rise enough that sun-exposed leaves cannot maintain both hydraulic safety and the transpirational cooling required to keep $T_{leaf}$ below damaging thresholds.
 In contrast, understory trees will be more sheltered during droughts and heat waves, and in some settings may benefit from increased light availability [@bennettLargerTreesSuffer2015;@hoganDroughtInterannualVariability2019].
 An interesting open question is to what extent these patterns vary with the nature of the drought, including the relative contributions to stress from low soil moisture versus high VPD. 
@@ -543,7 +543,7 @@ The leaf-level responses are relatively well-understood: at the metabolic level,
 Beyond this inflection point, photosynthesis declines whereas respiration continues to increase exponentially, eventually shifting the carbon balance from sink to source, independent of water and irradiance [@duffyHowCloseAre2021]. 
 While leaves display substantial plasticity to adapt to warmer temperatures [@slotGeneralPatternsAcclimation2015; @slotPhotosyntheticPlasticityTropical2021; @wayJustRightTemperature2019;@cunninghamTemperateRainforestTrees2003] and to recover from heat stress [@smithEmpiricalEvidenceResilience2020], failure to fully acclimate will result in reduced carbon sequestration at leaf and ecosystem levels [@huangAirTemperatureOptima2019; @wayJustRightTemperature2019; @tanOptimumAirTemperature2017; @bennettThermalOptimaGross2021]. 
 Exposed canopies are likely most vulnerable, as growing season $T_{air}$ is increasingly equaling or exceeding photosynthetic optima [@slotSituTemperatureResponse2017; @mauTemperateTropicalForest2018; @huangAirTemperatureOptima2019; @kumarathungeAcclimationAdaptationComponents2019]. 
-Particularly in mid-latitude forests, which have the narrowest thermal safety margin between historical maximum temperatures and leaf thermal tolerance levels [@osullivanThermalLimitsLeaf2017], $T_{leaf}$ of sun-exposed leaves may approach thermal tolerance thresholds during heat waves, resulting in photosynthetic decline or even leaf death [e.g., @osullivanThermalLimitsLeaf2017; @tiwariPhotosyntheticQuantumEfficiency2021; @kunertSummerTemperaturesReachinpress]. 
+Particularly in mid-latitude forests, which have the narrowest thermal safety margin between historical maximum temperatures and leaf thermal tolerance levels [@osullivanThermalLimitsLeaf2017], $T_{leaf}$ of sun-exposed leaves may approach thermal tolerance thresholds during heat waves, resulting in photosynthetic decline or even leaf death [@osullivanThermalLimitsLeaf2017; @tiwariPhotosyntheticQuantumEfficiency2021; @kunertSummerTemperaturesReachinpress]. 
 
 Although understory leaves are unlikely to face the same absolute extremes of $T_{leaf}$ (unless exposed to sunflecks), they will also be affected by higher $T_{air}$, and in some ways are likely to prove more sensitive.
 Protection from thermal stress associated with high direct radiation might allow shaded layers to photosynthesize longer in the day [@millerOnlySunlitLeaves2021; @heChangesShadowShifting2018a].
@@ -559,8 +559,8 @@ When the canopy trees die, this will open canopy gaps, as discussed in the follo
 
 ### Canopy disturbance
 
-As discussed above, rising temperatures and severe droughts place canopy trees at particularly elevated risk of mortality. 
-Moreover, large trees are also disproportionately impacted by other climate-related disturbances [e.g., wind, lighting,  @goraImplicationsSizedependentTree2021] that are expected to intensify with climate change[@ipccClimateChange20212021], and they are also targeted by selective logging operations [e.g., @millerReducedImpactLogging2011]. 
+Rising temperatures and severe droughts place canopy trees at particularly elevated risk of mortality. 
+Moreover, large trees are also disproportionately impacted by other climate-related disturbances [e.g., wind, lighting,  @goraImplicationsSizedependentTree2021] that are expected to intensify with climate change [@ipccClimateChange20212021], and they are also targeted by selective logging operations [e.g., @millerReducedImpactLogging2011]. 
 Increase in the severity and frequency of heat waves, accompanied with an increase in VPD and ET, can exacerbate effects of drought on predominantly canopy trees, potentially causing large scale canopy die-back [@matusickSuddenForestCanopy2013; @teskeyResponsesTreeSpecies2015; @breshearsUnderappreciatedPlantVulnerabilities2021].
 Forest fragmentation also disproportionately kills large trees by making them more vulnerable to wind, desiccation, and liana infestation [@lauranceRainForestFragmentation2006].
 Thus, canopies are becoming increasingly prone to disturbance and gap formation, which in turn increases incident radiation levels and temperatures within the forest [@juckerCanopyStructureTopography2018; @starkReframingTropicalSavannization2020]. 
