--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -581,7 +581,7 @@ Ultimately, to achieve the important goal of understanding feedbacks between the
 
 ### Representing Vertical Gradients in Models
 
-Future forest dynamics remain one of the largest sources of uncertainty in Earth system model projections of the future of global carbon cycling and climate change [@friedlingsteinClimateCarbonCycle2006].
+Future forest dynamics remain one of the largest sources of uncertainty in Earth system model projections of the future of global carbon cycling and climate change [@friedlingsteinClimateCarbonCycle2006; @aroraCarbonConcentrationCarboon2020].
 Dynamic global vegetation models (DGVMs), which comprise the land surface models in Earth system models, are used to predict the global distribution of vegetation types and biosphere-atmosphere feedbacks [@foleyIntegratedBiosphereModel1996; @sitchEvaluationEcosystemDynamics2003; @woodwardVegetationDynamicsSimulating2004]. 
 DGVMs operate at a range of scales and vary in complexity, from detailed individual-based models (i.e., forest gap models), which represent vegetation at the level of individual plants, capturing spatial variability in the light environment and microclimates at high vertical and horizontal spatial resolution [@shugartGapModelsTheir2018], to big-leaf models that reduce 3D vegetation structure across the entire biosphere into a single vegetation layer, implicitly capturing vertical profiles in light, photosynthetic capacity and other features by assuming those profiles are exponential and thus can be integrated analytically [@bonanDynamicGlobalVegetation2003; @krinnerDynamicGlobalVegetation2005]. 
 This simplification is computationally more efficient, although it comes at a cost of a lack of representation of important demographic processes and vertical light competition [@hurttTerrestrialModelsGlobal1998; @krinnerDynamicGlobalVegetation2005; @smithRepresentationVegetationDynamics2001]. 
@@ -591,7 +591,7 @@ These sit between the oversimplified vegetation dynamics in big-leaf models, whi
 Owing to differences in the representation of forest vertical strata, DVGMs vary in their ability to incorporate vertical variation in leaf traits and physiological processes. 
 In general, however, this variation is accounted for via light competition. 
 Models partition incoming radiation and radiation within the forest vertical profile (i.e., direct vs. diffuse light) using radiative transfer models or a system of two coupled ordinary differential equations, referred to as a two-stream approximation [@sellersCanopyReflectancePhotosynthesis1985; @fisherVegetationDemographicsEarth2018a]. 
-Using the latter method, single canopy layers are divided into sun and shade fractions (e.g., CLM), while models with multiple vegetative layers can analytically solve the 2-stream approximation for each layer. Thus, even in single-layer models, key physiological parameters like $V_{cmax}$ and $J_{max}$ vary, decreasing with increasing LAI, or lower light conditions [e.g., @krinnerDynamicGlobalVegetation2005a]. 
+Using the latter method, single canopy layers are divided into sun and shade fractions (e.g., CLM), while models with multiple vegetative layers can analytically solve the two-stream approximation for each layer. Thus, even in single-layer models, key physiological parameters like $V_{cmax}$ and $J_{max}$ vary, decreasing with increasing LAI, or lower light conditions [Table 2, e.g., @krinnerDynamicGlobalVegetation2005]. 
 In recent years, there has been a growing effort to incorporate vertical variation more directly in models, specifically as it pertains to leaf water potential and light absorption by leaves, along with a general increasing interest in making direct comparison between models and field measurements [@fisherPerspectivesFutureLand2020]. Several recent model developments are at the cutting edge of representing vertical variation. 
 Model developments by [**Bonan et al., 2018; Chen et al., 2016; Longo et al., 2019**] implement vertical gradients of irradiance, water content, leaf temperature, and the feedback between the evaporation of water into the vegetated air space and the humidity of the airspace, modulated by turbulence processes within the forest and a roughness layer that extends to roughly twice the height of the canopy [@fisherPerspectivesFutureLand2020]. 
 
