--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -584,7 +584,7 @@ Ultimately, to achieve the important goal of understanding feedbacks between the
 Future forest dynamics remain one of the largest sources of uncertainty in Earth system model projections of the future of global carbon cycling and climate change [@friedlingsteinClimateCarbonCycle2006; @aroraCarbonConcentrationCarboon2020].
 Dynamic global vegetation models (DGVMs), which comprise the land surface models in Earth system models, are used to predict the global distribution of vegetation types and biosphere-atmosphere feedbacks [@foleyIntegratedBiosphereModel1996; @sitchEvaluationEcosystemDynamics2003; @woodwardVegetationDynamicsSimulating2004]. 
 DGVMs operate at a range of scales and vary in complexity, from detailed individual-based models (i.e., forest gap models), which represent vegetation at the level of individual plants, capturing spatial variability in the light environment and microclimates at high vertical and horizontal spatial resolution [@shugartGapModelsTheir2018], to big-leaf models that reduce 3D vegetation structure across the entire biosphere into a single vegetation layer, implicitly capturing vertical profiles in light, photosynthetic capacity and other features by assuming those profiles are exponential and thus can be integrated analytically [@bonanDynamicGlobalVegetation2003; @krinnerDynamicGlobalVegetation2005]. 
-This simplification is computationally more efficient, although it does not always capture observed vertical profiles (see section 1) and comes at a cost of a lack of representation of important demographic processes and vertical light competition [@hurttTerrestrialModelsGlobal1998; @krinnerDynamicGlobalVegetation2005; @smithRepresentationVegetationDynamics2001]. 
+This simplification is computationally more efficient, although it does not always capture observed vertical profiles (sections 1-4; for example, vertical shifts in the balance between stomatal conductance and photosynthetic capacity, see sections 4.1-4.2) and comes at a cost of a lack of representation of important demographic processes and vertical light competition [@hurttTerrestrialModelsGlobal1998; @krinnerDynamicGlobalVegetation2005; @smithRepresentationVegetationDynamics2001]. 
 The computational middle-ground to representing vertical structure in DVGMs lies in cohort-based models, which represent vegetation as cohorts of individual plants, grouped together based on properties including size, age, and functional type [@fisherVegetationDemographicsEarth2018].
 These sit between the oversimplified vegetation dynamics in big-leaf models, which do not represent any vertical stratification, and individual-based models, whose computational expense prevents them from being integrated into Earth system models. 
 
