proofreading: Scaling across space and time & conclusions

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -253,7 +253,7 @@ Therefore, in these forests, leaves in the upper canopy can experience greater $
 In contrast, open canopies with lower LAI allow more vertical air mixing and sunlight into the understory. 
 This mixing and light transmission can either neutralize a $T_{leaf}$ gradient or elevate $T_{leaf}-T_{air}$ at lower heights relative to the upper canopy [Fig. `r fig_NEON_vertical`h, Supporting Information Figure `r SIfig_NEON_all`, @hadleyInfluenceKrummholzMat1987; @mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002]. 
 The latter can result from a combination of still air at lower heights (Fig. `r fig_NEON_vertical`e), and sunflecks or the 'canopy greenhouse effect', as mentioned above [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013], and because shade leaves tend to have lower $g_s$  [@schymanskiStomatalControlLeaf2013]. 
-Similarly, in very open forests or savannas, trees growing close to the ground can experience greater heat stress in their lower than upper canopies due to heat from the soil increasing the $T_{leaf}$ of the foliage close to the ground [@hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019; @johnstonWhatLiesVertical2020]. 
+Similarly, in very open forests or savannas, trees growing close to the ground can experience greater heat stress in their lower than upper canopies due to heat from the soil increasing the $T_{leaf}$ of the foliage close to the ground [Fig. `r SIfig_NEON_all`, @hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019; @johnstonWhatLiesVertical2020]. 
 One of the few remote sensing studies combining drone lidar and thermal data found strong vertical gradients in midday plant temperature with ~5$^{\circ}$C cooler temperatures lower in the vertical profile of a dense forest stand in the sub-alpine Eastern Swiss Alps [@websterThreedimensionalThermalCharacterization2018]. 
 However, the opposite trend was observed for a lone tree surrounded by grass in the same area, with cooler temperatures at the top of the tree crown, indicating a strong influence of closed-canopy shading on vertical temperature gradients [@johnstonWhatLiesVertical2020]. 
 
@@ -591,9 +591,9 @@ These sit between the oversimplified vegetation dynamics in big-leaf models, whi
 Owing to differences in the representation of forest vertical strata, DVGMs vary in their ability to incorporate vertical variation in leaf traits and physiological processes. 
 In general, however, this variation is accounted for via light competition. 
 Models partition incoming radiation and radiation within the forest vertical profile (i.e., direct vs. diffuse light) using radiative transfer models or a system of two coupled ordinary differential equations, referred to as a two-stream approximation [@sellersCanopyReflectancePhotosynthesis1985; @fisherVegetationDemographicsEarth2018a]. 
-Using the latter method, single canopy layers are divided into sun and shade fractions (e.g., CLM), while models with multiple vegetative layers can analytically solve the two-stream approximation for each layer. Thus, even in single-layer models, key physiological parameters like $V_{cmax}$ and $J_{max}$ vary, decreasing with increasing LAI, or lower light conditions [Table 2, e.g., @krinnerDynamicGlobalVegetation2005]. 
+Using the latter method, single canopy layers are divided into sun and shade fractions (e.g., in the CLM model), while models with multiple vegetative layers can analytically solve the two-stream approximation for each layer. Thus, even in single-layer models, key physiological parameters like $V_{cmax}$ and $J_{max}$ vary, decreasing with increasing LAI, or lower light conditions [Table 2, e.g., @krinnerDynamicGlobalVegetation2005]. 
 In recent years, there has been a growing effort to incorporate vertical variation more directly in models, specifically as it pertains to leaf water potential and light absorption by leaves, along with a general increasing interest in making direct comparison between models and field measurements [@fisherPerspectivesFutureLand2020]. Several recent model developments are at the cutting edge of representing vertical variation. 
-Model developments by [**Bonan et al., 2018; Chen et al., 2016; Longo et al., 2019**] implement vertical gradients of irradiance, water content, leaf temperature, and the feedback between the evaporation of water into the vegetated air space and the humidity of the airspace, modulated by turbulence processes within the forest and a roughness layer that extends to roughly twice the height of the canopy [@fisherPerspectivesFutureLand2020]. 
+Model developments by @Chen_et_al_2016, @Bonan_et_al_2018, and @Longo_et_al_2019 implement vertical gradients of irradiance, water content, leaf temperature, and the feedback between the evaporation of water into the vegetated air space and the humidity of the airspace, modulated by turbulence processes within the forest and a roughness layer that extends to roughly twice the height of the canopy [@fisherPerspectivesFutureLand2020]. 
 
 The findings of this review reinforce the notion that representing vertical structuring is essential to capturing forest dynamics under global change.
 Improved representation of vertical variation in forest structure and ecosystem function is critical for representing thermal sensitivity and has repeatedly been identified as an important step toward reduced uncertainty and more accurate characterization of biologically mediated feedbacks [@moorcroftMethodScalingVegetation2001; @banerjeeEffectVerticalCanopy2018; @bonanMovingIncorrectUseful2021]. 
@@ -605,9 +605,9 @@ Less attention has focused on developing and validating understory tree dynamics
 This is likely due in large part to the fact that observational and experimental studies required to resolve key patterns and underlying mechanisms remain somewhat sparse (see sections 4, 5).
 Pairing of models and observational studies will be important for further improving our mechanistic understanding of vertical gradients and their implications.
 
-Though an improvement over big-leaf models, DGVMs that separate the canopy into only two layers [e.g., sunlit and shaded portions, @depurySimpleScalingPhotosynthesis1997] may not be able to capture important within-canopy variation in terms of leaf dynamics [e.g., seasonal shifts in vertical leaf area distributions, @smithSeasonalDroughtrelatedChanges2019] and functions (e.g., thermal responses, as we present in this paper). 
+Though an improvement over big-leaf models, DGVMs that separate the canopy into only two layers [e.g., sunlit and shaded portions, @depurySimpleScalingPhotosynthesis1997] may not be able to capture important within-canopy variation in terms of leaf dynamics [e.g., seasonal shifts in vertical leaf area distributions, Table 1, @smithSeasonalDroughtrelatedChanges2019] and functions (e.g., thermal responses, Table 2). 
 At the very least, multi-layered ecosystem models will likely be necessary for accurately predicting future forest function [e.g., @bonanMovingIncorrectUseful2021].
-In addition, capturing the vertical gradients in ET, GPP, respiration, and woody growth, and subsequently the net ecosystem effects (Figs.`r fig_treerings` - `r fig_ecosystem`), requires improved characterization of the functional response of leaf-level processes (Table `r table_leaf_metabolism`, Fig.`r `fig_leaf_T`) to vertically varying abiotic conditions (Fig.`fig_NEON_vertical`), and the role of traits (Table `r table_leaf_traits`) in mediating responses to thermal sensitivity. 
+In addition, capturing the vertical gradients in ET, GPP, respiration, and woody growth, and subsequently the net ecosystem effects (Figs. `r fig_treerings` - `r fig_ecosystem`), requires improved characterization of the functional response of leaf-level processes (Table `r table_leaf_metabolism`, Fig. `r fig_leaf_T`) to vertically varying abiotic conditions (Fig. `r fig_NEON_vertical`), and the role of traits (Table `r table_leaf_traits`) in mediating responses to thermal sensitivity. 
 
 
 ### Scaling in situ data with remote sensing
@@ -615,7 +615,7 @@ In addition, capturing the vertical gradients in ET, GPP, respiration, and woody
 Remote sensing data provide a valuable means to scale between *in situ* observations and DGVMs.
 Specifically, the increasing availability of airborne and spaceborne lidar and thermal remote sensing data offer a promising opportunity for mapping vertical thermal gradients in combination with vegetation structure at locations with *in situ* data and across larger landscapes (Fig. `r fig_model`). 
 Airborne and spaceborne lidar, as well as terrestrial laser scanning data, yield detailed 3D reconstructions of whole tree and forest structure. 
-These data can be leveraged in combination with thermal remote sensing data from the spaceborne ECOSTRESS sensor [@hulleyNewECOSTRESSMODIS2019; @fisherECOSTRESSNASANext2020] or drone- and tower-based Forward Looking Infrared (FLIR) cameras. 
+These data can be leveraged in combination with thermal remote sensing data from the spaceborne ECOSTRESS sensor [@hulleyNewECOSTRESSMODIS2019; @fisherECOSTRESSNASANext2020] or drone- and tower-based Forward Looking Infrared cameras. 
 
 
 ![**Figure `r fig_model`.** Lidar and thermal remote sensing data can be used to measure vertical forest structure and plant thermal signatures at increasingly large scales. (a-b) Integrating in situ and remote sensing measurements will support our ability to scale understanding of vertical gradients within and across ecosystems. (c) In turn, these efforts can be used to directly inform ecosystem model development and parameterization. Vertically resolved in situ data could include any variable listed in Table 1 or 2. Panel b shows drone lidar point cloud data colored with thermal data from a savanna woodland in Kruger National Park, South Africa illustrating vertical and horizontal variation in vegetation temperature. Image courtesy of the Harvard Animal-Landscape Observatory, Peter B. Boucher and Andrew B. Davies.](schematics/fig_remote_sensing.png)
@@ -623,9 +623,9 @@ These data can be leveraged in combination with thermal remote sensing data from
 Detailed structural information from lidar data has been used to measure tree height, DBH, and crown dimensions [@fisherECOSTRESSNASANext2020], evaluate spatial variation in vertical leaf area density profiles [@dettoSpatialVariabilityTropical2015], and resolve complex seasonal and diurnal variation in shortwave radiation forcing in ecosystems [@musselmanEstimationSolarDirect2013].
 In addition, shading by the canopy can be better represented to predict understory temperatures by modeling the time-varying interaction of the forest canopy with solar radiation, as has been done in other lidar-based analyses [e.g., @davisLiDARderivedTopographyForest2019].
 Satellite and airborne thermal infrared remote sensing analyses are now being conducted at regional and continental scales, although very few applications exist at finer-scales necessary for understanding of vertical variation in plant canopy temperatures [@johnstonWhatLiesVertical2020]. 
-As an example of the type of insight that can be gained from this approach, @pauTropicalForestTemperature2018 used data from a tower-based FLIR camera in combination with eddy-covariance data and found that tropical forest canopy temperatures were more strongly associated with GPP than $T_{air}$ or VPD. 
+As an example of the type of insight that can be gained from this approach, @pauTropicalForestTemperature2018 used data from a tower-based Forward Looking Infrared camera in combination with eddy-covariance data and found that tropical forest canopy temperatures were more strongly associated with GPP than $T_{air}$ or VPD. 
 However, the authors did not consider vertical light environment conditions even though light directly influences the deviation between canopy temperature and $T_{air}$. 
-In a savanna system in the western U.S., @johnstonWhatLiesVertical2020 found significant vertical variation in plant temperature, with warmer temperatures in the understory compared to the top of the blue oak canopies -- a finding opposite of what was expected that occurred in association with very high grass temperatures.
+In a savanna system in the western U.S., @johnstonWhatLiesVertical2020 found significant vertical variation in plant temperature, with warmer temperatures in the understory compared to the top of the blue oak canopies -- a finding that occurred in association with very high grass temperatures and consistent with the principles outlined in sections 1-2 (Fig. `r SIfig_NEON_all`).
 The growing availability of these data makes this an opportune time to link fine-scale and landscape-scale measurements with the type of *in situ* measurements reviewed above to further explore ecosystem-scale patterns in vertical temperature gradients seasonally and across biomes. 
 
 
@@ -646,7 +646,7 @@ Integrating the patterns and mechanisms reviewed here, along with remote sensing
 
 
 ## Acknowledgements
-Thanks to Norbert Kunert, Camille Piponiot, Peter B. Boucher and Andrew B. Davies for providing figure materials. 
+Thanks to Valentine Herrmann, Norbert Kunert, Camille Piponiot, Peter B. Boucher and Andrew B. Davies for providing figure materials. 
 This manuscript benefited from feedback from Eleinis Ávila-Lovera and the ForestGEO Ecosystems & Climate lab at SCBI.
 Funding was provided by the Smithsonian Institution.
 
