--- a/response-to-reviews.Rmd
+++ b/response-to-reviews.Rmd
@@ -31,15 +31,13 @@ We are pleased to submit a revised version of our manuscript, "Thermal sensitivi
 
 - We did some modest reorganization, including moving the content on $T_{crit}$ and VOCs to the traits section (the former suggested by Reviewer 2) and reorganizing the traits section around trait groupings, as opposed to intra-specific/ interspecific. This rearrangement of the traits section better parallels Table 1 and the following section on leaf gas exchange.
 
-- We revised three figures (Figs. 1-3) based on reviewer comments 
+- We revised three figures (Figs. 1-4) based on reviewer comments, including some standardization of style, but have not perfected the styling because the journal illustrators will fix up all figures. 
 
 Regarding production of the figures, below are some specific criteria:
 <!--To ensure rapid handling of your manuscript we would be grateful if you could confirm, in the cover letter to the Editor, whether or not there are any important elements of the figures that need to be retained (eg. colours used, plant species drawn, layout and spacing, symbols, etc) and if you have specific instructions that you would like the illustrator to take on board.-->
 
 - It will generally be fine to adjust colors, layout, and spacing on the figures.
 - We really like Figure 1 and would like to retain the background painting (by the lead author)
-- On Fig. 4, please adjust colors on panel (a) to correspond to those in panel (b), where "min MIN" color should match "understory" and "max DBH" should match "canopy". The same color scheme can be applied to all panels in (a), and there is no need to keep the line type differences (both can be solid). Also, please remove the vertical dashed lines and grey shading.
-
 
 Thank you for considering this revised version, and we look forward to your response.
 
